[package]
name = "irkle"
description = "A merkle tree implementation based upon the blake3 hash and binary tree arrays for superfast trees ⚡"
version = "0.1.0-pre.1"
repository = "https://github.com/Owez/irkle"
license = "MIT"
readme = "README.md"
keywords = ["merkle-tree", "hash-tree", "blockchain", "scm", "package-management"]
authors = ["Owez <root@ogriffiths.com>"]
edition = "2018"

[dependencies.blake3]
version = "0.3.7"
